--- a/DataVisualizationAPI/appsettings.json
+++ b/DataVisualizationAPI/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=PC;Initial Catalog=DataVisualization;Integrated Security=True;Trust Server Certificate=True"
+  },
+
+  "Jwt": {
+    "Key": "9dXphm0A6vUr7eZRoS16N6mH9t7D3TlZ",
+    "Issuer": "DataVisualizationAPI",
+    "Audience": "DataVisualizationClient"
+  }
 }
